--- a/web-app/input.css
+++ b/web-app/input.css
@@ -2,24 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Styles for the spoiler blocks */
+.spoiler-checkbox {
+}
+
+.spoiler-text {
+}
+
+.spoiler-checkbox:checked + .spoiler-text {
+    background-color: black;
+    color: white;
+}
+
 /* Style for spoiler container */
-.spoiler-container {
+.spoiler-container-example {
     position: relative;
 }
 /* Style for spoiler text */
-.spoiler-content {
-    display: none;
+.spoiler-content-example {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: white;
+    background-color: gray;
     border: 1px solid #ccc;
     padding: 0.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 10;
 }
 /* Show spoiler text when checkbox is checked */
-.spoiler-input:checked + .spoiler-label + .spoiler-content {
-    display: block;
+.spoiler-input-example:checked + .spoiler-label-example + .spoiler-content-example {
+    background-color: white;
+    color: white;
 }
