--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3174,6 +3174,10 @@ html {
   max-height: 100vh;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
 .min-h-24 {
   min-height: 6rem;
 }
@@ -3620,6 +3624,10 @@ html {
   padding-top: 0.5rem;
 }
 
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -3857,6 +3865,15 @@ html {
 .hover\:border-white:hover {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.hover\:bg-neutral-focus:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--nf) / var(--tw-bg-opacity));
+}
+
+.hover\:bg-base-content\/20:hover {
+  background-color: hsl(var(--bc) / 0.2);
 }
 
 @media not all and (min-width: 1536px) {
