--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3077,10 +3077,6 @@ html {
   margin-bottom: 1rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -3107,6 +3103,10 @@ html {
 
 .h-12 {
   height: 3rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-24 {
@@ -3145,16 +3145,9 @@ html {
   height: 100vh;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-16 {
-  height: 4rem;
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .max-h-96 {
@@ -3574,9 +3567,8 @@ html {
   padding-bottom: 1rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .pl-2 {
@@ -3597,10 +3589,6 @@ html {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
 }
 
 .text-left {
