--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3069,11 +3069,6 @@ html {
   margin-bottom: 0.5rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -3113,10 +3108,6 @@ html {
 
 .h-12 {
   height: 3rem;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .h-24 {
@@ -3261,6 +3252,10 @@ html {
   flex-shrink: 0;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -3305,6 +3300,10 @@ html {
 
 .content-start {
   align-content: flex-start;
+}
+
+.content-stretch {
+  align-content: stretch;
 }
 
 .items-end {
