--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3223,10 +3223,6 @@ html {
   width: 7rem;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
 .w-4 {
   width: 1rem;
 }
@@ -3278,6 +3274,22 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.min-w-8 {
+  min-width: 2rem;
+}
+
+.min-w-10 {
+  min-width: 2.5rem;
+}
+
+.min-w-6 {
+  min-width: 1.5rem;
 }
 
 .max-w-full {
